Working on making the navbar responsive first as i think its the most important bit. Plus on mobile it looked horrendous! Added some media queries and also included the navbar toggler. Need to sort out some styling issues but its working ok so far

--- a/client/src/components/HomeComponents/BottomNav/style.css
+++ b/client/src/components/HomeComponents/BottomNav/style.css
@@ -1,5 +1,6 @@
 nav {
 	width: auto !important;
+	height: auto;
 	margin: 0 !important;
 	padding: 25px 0 !important;
 	left: 0;
@@ -52,4 +53,33 @@ a:hover {
 #insta:hover, #facebook:hover {
 	opacity: 0.5;
 	transition: ease-in-out .2s;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+	nav {
+		color: red !important;
+	}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+	nav { 
+		font-size: 10px !important;
+		
+	}
+
+	.navbar-expand-md .navbar-nav .nav-link {
+		padding-right: 0 !important;
+	}
 }
